adicionado a derivação fator -> ( ExpressaoAritimetica ) no parser,o  seu respectivo teste e transformado parte da arvore sintática em Arvore Sintática abstrata

--- a/doc/compilador.tex
+++ b/doc/compilador.tex
@@ -37,7 +37,7 @@ $\langle\text{expressaoAritmetica}\rangle \rightarrow  \langle\text{termo}\rangl
 $\langle\text{expressaoAritmetica'}\rangle \rightarrow \langle\text{addOUsub}\rangle \langle\text{termo}\rangle \langle\text{expressaoAritmetica'}\rangle | \epsilon $\\\\
 $\langle\text{termo}\rangle \rightarrow \langle\text{fator}\rangle \langle\text{termo'}\rangle $\\\\
 $\langle\text{termo'}\rangle \rightarrow \langle\text{multOUdiv}\rangle \langle\text{fator}\rangle \langle\text{termo'}\rangle | \epsilon $\\\\
-$\langle\text{fator}\rangle \rightarrow \textbf{id }| \textbf{ ConstInt } | \textbf{ ConstReal } $\\\\
+$\langle\text{fator}\rangle \rightarrow \textbf{id }| \textbf{ ConstInt } | \textbf{ ConstReal } | \textbf{(} \langle\text{expressaoAritmetica}\rangle  \textbf{)} $\\\\
 $\langle\text{addOUsub}\rangle \rightarrow  \textbf{add } | \textbf{ sub}$ \\\\
 $\langle\text{multOUdiv}\rangle \rightarrow  \textbf{mult } | \textbf{ div}$ \\\\
 
